Free => sandbox throughout

--- a/source/_partials/topics/get-started.html
+++ b/source/_partials/topics/get-started.html
@@ -17,7 +17,7 @@
 </div>
 <div class="row">
   <div class="col-md-6 topic-groups">
-    <h3>Create Free Site</h3>
+    <h3>Create Sandbox Site</h3>
     <p class="topic-info__description">Spin up a Drupal or WordPress site for free in minutes.</p>
     <ul class="topic-docs">
       {% for doc in data.docs_tags.create if doc.meta.type == "video"%}
