--- a/source/_partials/content/monitor-alerts.html
+++ b/source/_partials/content/monitor-alerts.html
@@ -8,3 +8,25 @@
 
 <h3>Idle Containers</h3>
 <p>Containers on Pantheon are automatically spun down following a period of inactivity, then spun back up once a web request is made. Monitoring pings sent between the initial request and the completed spin-up may fail, but do not necessarily indicate an issue. For details, see <a href="/docs/application-containers/#idle-containers">All About Application Containers</a>.</p>
+
+<h2>Assess Alerts</h2>
+
+<p>Before opening a support ticket based on an alert, please take the following actions:</p>
+
+<ol>
+<li><p>Identify what the alert is monitoring, and/or what triggered it.</p></li>
+<li><p>Check the page/service being monitored to see if there is an issue, or if it's a false positive. Check to see if the issue is still happening or if it has resolved itself.</p></li>
+<li><p>Once you have verified an outstanding issue, please reach out to support.</p></li>
+</ol>
+
+<p>If the issue creating the alert stems from the Pantheon Platform, we will investigate and resolve. If the issue stems from your site code, we can attempt to provide guidance, but you will need to resolve the underlying issue.</p>
+
+<p>In order for Pantheon Support to better assist you, please have the following information ready:</p>
+
+<ul>
+<li><p>Steps to reproduce the issue (including URLs or paths to files).</p></li>
+<li><p>Environments affected (Multidev/Dev/Test/Live), if applicable.</p></li>
+<li><p>When the issue began.</p></li>
+<li><p>any error messages you received.</p></li>
+<li><p>Links to screenshots or screencasts of the behavior, if necessary.</p></li>
+</ul>
