--- a/source/_partials/content/tables/custom-domains-limit.html
+++ b/source/_partials/content/tables/custom-domains-limit.html
@@ -5,21 +5,27 @@
     <tr>
       <th scope="row" class="thead-inverse"></th>
       <th>Basic</th>
-      <th>Professional</th>
-      <th>Business</th>
+      <th>Performance S</th>
+      <th>Performance M</th>
+      <th>Performance L</th>
+      <th>Performance XL</th>
       <th>Elite</th>
     </tr>
   </thead>
   <tbody>
     <tr>
       <th scope="row" class="thead-inverse">Custom Domain Limit (per site)</th>
+      <td>3</td>
       <td>5</td>
+      <td>10</td>
       <td>25</td>
-      <td>100</td>
+      <td>50</td>
       <td>200</td>
     </tr>
     <tr>
       <th scope="row" class="thead-inverse">Free and managed HTTPS</th>
+      <td>✓</td>
+      <td>✓</td>
       <td>✓</td>
       <td>✓</td>
       <td>✓</td>
