Copy edits:  - Reuse screenshot showing current plan in green in cancel plan section  - Fix broken ol within send a request tab  - Explicitly warn that send a request transfers site ownership

--- a/source/_partials/content/transfer-owernship-billing-intro.html
+++ b/source/_partials/content/transfer-owernship-billing-intro.html
@@ -3,5 +3,5 @@
 
 <div class="alert alert-danger">
   <h4 class="info">Warning</h4>
-  <p>The account paying for the site is automatically assigned the <strong>Site Owner</strong> role. Agencies maintain access by being associated as a Supporting Organization.</p>
+  <p>This process will transfer ownership of the site. The account paying for the site is automatically assigned the <strong>Site Owner</strong> role. Agencies maintain access by being associated as a Supporting Organization.</p>
 </div>
