--- a/source/_views/post.html
+++ b/source/_views/post.html
@@ -2,7 +2,7 @@
 {% block content_wrapper %}
 <div class="container">
   <div class="row">
-    <div class="col-md-9 mb-70" style="margin-top:-20px;">
+    <div id="doc" class="col-md-9 mb-70" style="margin-top:-20px;">
       <h1>Pantheon Changelog<br />{% if page.changelogmain is not defined %}<small>{{page.title}}</small></h1>{% endif %}
       {{ page.blocks.content|raw }}
     </div>
