Use Open Sans for all, except H1s which use TabletGothic

--- a/source/_views/contrib.html
+++ b/source/_views/contrib.html
@@ -84,6 +84,7 @@
     <meta property="og:site_name" content="Pantheon Documentation" />
     <!--<meta property="fb:admins" content="Facebook numberic ID" />-->
     <!-- Latest compiled and minified CSS -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="/docs/assets/compiled/compiled.css?v={{ site.assets_version }}">
     <script src="//www.google-analytics.com/analytics.js"></script>
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
