--- a/source/_partials/content/monitor-alerts.html
+++ b/source/_partials/content/monitor-alerts.html
@@ -8,7 +8,7 @@
 <h3 id="idle-containers">Idle Containers</h3>
 <p>Containers on Pantheon are automatically spun down following a period of inactivity, then spun back up once a web request is made. Monitoring pings sent between the initial request and the completed spin-up may fail, but do not necessarily indicate an issue. For details, see <a href="/docs/application-containers/#idle-containers">All About Application Containers</a>.</p>
 
-<h2 id="support-for-handling-alerts">Supoprt for Handling Alerts</h2>
+<h2 id="support-for-handling-alerts">Support for Handling Alerts</h2>
   <p>Before opening a support ticket based on an alert, take the following actions:</p>
   <ol>
     <li>Refer to the alert message to confirm event reported (what monitor it came from, what triggered it, etc.).</li>
